--- a/JS/TP1/ex5/index.html
+++ b/JS/TP1/ex5/index.html
@@ -18,7 +18,7 @@
 			<section>
 				<h1>Déplacer un élément</h1>
 				<article>
-					<div class="ex5">
+					<div class="ex5" onclick="">
 					</div>
 				</article>
 
